--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Contacto</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,12 +14,30 @@
 	<!-- fila de logo + nav --> 
 	<header>
 		<nav>
-			<a href="../index.html"><img class="header__logo" src="../assets/img/Logo China.jpg" alt="imagen logo"></a>
-			<ul class="menu">
-				<li class="menu__item"><a href="../index.html">Home</a></li>
-				<li class="menu__item"><a href="../pages/producto.html">Productos</a></li>
-				<li class="menu__item"><a href="../pages/ubicacion.html">Ubicacion</a></li>
-				<li class="menu__item"><a href="../pages/contacto.html">Contacto</a></li>
+			<nav class="navbar navbar-expand-lg  fs-2" style="background-color: #e3f2fd;">
+				<div class="container-fluid">
+				  <a  class="navbar-brand header__logo" href="../index.html"> <img src="../assets/img/Logo China.jpg" width="150px" height="150px" alt="logo"></a>
+				  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				  </button>
+				  <div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav">
+					  <li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+					  </li>
+					  <li class="nav-item">
+						<a class="nav-link" href="./producto.html">Producto</a>
+					  </li>
+					  <li class="nav-item">
+						<a class="nav-link" href="./ubicacion.html">Ubicacion</a>
+					  </li>
+					  <li class="nav-item">
+						<a class="nav-link" href="./contacto.html">Contacto</a>
+					  </li>
+					</ul>
+				  </div>
+				</div>
+			  </nav>
 			</ul>
 		</nav>
 	</header>
