--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
-<body class="bg-secondary">
+<body>
 	<!-- Encabezado --> 
 	<header>
 		<nav>
@@ -53,7 +53,7 @@
 			<div class="row mt-5">
 				<div class="col-md-4">
 					<div class="card h-100 text-bg-light">
-					 <img src="./assets/img/imag 1.jpg" class="card-img-top" alt="1">
+					 <img src="./assets/img/imag 1.jpg" width="200px" height="300px" class="card-img-top" alt="1">
 					 <div class="card-body">
 					  <h5 class="card-title">Card title</h5>
 					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -63,7 +63,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="card h-100 text-bg-light">
-					 <img src="./assets/img/imag 2.jpg" class="card-img-top" alt="2">
+					 <img src="./assets/img/imag 2.jpg" width="200px" height="300px" class="card-img-top" alt="2">
 					 <div class="card-body">
 					  <h5 class="card-title">Card title</h5>
 					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -73,7 +73,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="card h-100 text-bg-light">
-					 <img src="./assets/img/imag 3.jpg" class="card-img-top" alt="3">
+					 <img src="./assets/img/imag 3.jpg" width="200px" height="300px" class="card-img-top" alt="3">
 					 <div class="card-body">
 					  <h5 class="card-title">Card title</h5>
 					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
