--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,11 +4,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Contacto</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
 	<!-- fila de logo + nav --> 
@@ -41,60 +41,75 @@
 			</ul>
 		</nav>
 	</header>
-	<!-- cierre de fila logo + nav -->
-	<!-- fila de información de mi sitio -->
-	<section>
-		<img src="/assets/img/header contacto.jpg" alt="imagen contacto" width="50%">
-	</section>
-	<section>
-		<h1>CONTACTO</h1>
-	</section>
-	<!-- formulario de contacto -->
-	<section>
-		<article class="formulario__style">
-			<form action="#">
-				<input type="text" placeholder="Escribe tu nombre"><br>
-				<label for="email">Email:
-					<input type="email" placeholder="aaa@gmail.com" name="email"><br>
-				</label>
-				<label for="Observaciones"> Observaciones:<br>
-					<textarea placeholder="Observaciones"></textarea>
-				</label> <br>
-				<input type="number" placeholder="Escribe tu edad"><br>
-				<div><p>¿Sobre que producto quieres información? :</p>
-					<div>Cuadernos
-						<input type="radio" name="producto" value="Cuadernos">
-					</div>
-					<div>Tags e insumos
-						<input type="radio" name="producto" value="Tags e insumos">
-					</div>
-				</div>
-				<p>¿De que país eres?</p>
-				<select name="letra" id="letra"> 
-					<option value="x">Argentina</option>
-					<option value="y">Chile</option>
-					<option value="z">Uruguay</option>
-				</select>
-				<div>Queres recibir info sobre nosotros?
-				<input type="checkbox" name="acepta" value="1"></div>
-				<input type="submit" value="ENVIAR">
-				<input type="reset" value="RESETEAR">
-			</form>
-		</article>
-	</section>
-	<!-- cierre de form contacto -->
-	<!-- inicio de footer --> 
+	
+	<section class="container">
+        <div class="row mt-5 gap-5 gap-md-0">
+            <div class="col-md-6">
+                <h4>Información de contacto</h4>
+                <div class="accordion" id="accordionExample">
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          Teléfono
+                        </button>
+                      </h2>
+                      <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                          00 00 000 000
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                          Dirección
+                        </button>
+                      </h2>
+                      <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                          Bs As 123
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                          Correo electrónico
+                        </button>
+                      </h2>
+                      <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                          info@ejemplo.com
+                        </div>
+                      </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <h4>Envianos un mensaje</h4>
+                <form>
+                    <div class="mb-3">
+                        <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+                        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Ingresá tu nombre">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleFormControlInput1" class="form-label">E-mail</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ingresá tu e-mail">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+
+
 	<footer>
-		<div class="info__izquierda">
-		<h3 class="footer__enlaces">MEDIOS DE PAGO</h3>
-		<h3 class="footer__enlaces">FORMAS DE ENVIO</h3>
-	    </div>
-		<div class="info__derecha">
-		<h3 class="footer__enlaces">NUESTRAS REDES</h3>
-		<h3 class="footer__enlaces">CONTACTO</h3>
-	    </div>
 		<p class="footer__p">&copy Todos los derechos reservados</p>   
 	</footer >
 	<img class="wpp" src="../assets/img/whatsapp.webp" alt="whats">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 </html>
