agregando sass y seo

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
-	<title>China Belleza</title>
+	<title>China Belleza - Inicio</title>
+    <meta name="description" content="Agendas personalizadas y encuadernacion artesanal">
+	<meta name="keywords" content="Agendas, encuadernacion, artesanal, cuadernos, anillados">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+	<script src="https://kit.fontawesome.com/5defac5f80.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="./css/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -83,11 +86,22 @@
 				</div>
 			</div>
 		</section>
+		<section>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, nostrum velit excepturi dolorum assumenda earum expedita cum accusamus sunt delectus autem asperiores tenetur ducimus voluptatem, officia harum animi a enim!</p>
+		</section>
 	</main>
 	<!-- inicio de footer --> 
 	<footer class="pie">
-        <p>&copy Todos los derechos reservados</p>
-        <p>I Lobos</p>
+        <div>
+		 <p>&copy Todos los derechos reservados</p>
+         <p>I Lobos</p>
+	    </div>
+		<div class="iconos">
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-whatsapp"></i>
+			<i class="tel"> Telefonos </i>
+        </div>
     </footer>
 	<img class="wpp" src="./assets/img/whatsapp.webp" alt="whats">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
