--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@
 	<!-- Fin de encabezado -->
 	<!-- Contenido de sitio -->
 	<main>
-		<section class="d-flex justify-content-center align-items-center">
-		  <h2 class="text-white mt-5">Nuestros ultimos cursos de encuadernacion</h2>
-		</section>
-
+		<section class="imagenPrincipal">
+            <h2>Bienvenidos a CarpiViajes</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime necessitatibus inventore voluptates rem impedit fugiat officia aliquam voluptas! Commodi ab ut fugiat quas odio ratione quidem impedit similique aperiam. Modi.</p>
+        </section>
+	
 		<section class="container">
-			<div class="row mt-5">
+			<div class="row mt-5 p-5 pb-5">
 				<div class="col-md-4">
 					<div class="card h-100 text-bg-light tarjeta:hover tarjeta ">
 					 <img src="./assets/img/imag 1.jpg" width="200px" height="300px" class="card-img-top" alt="1">
@@ -86,22 +87,54 @@
 				</div>
 			</div>
 		</section>
-		<section>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, nostrum velit excepturi dolorum assumenda earum expedita cum accusamus sunt delectus autem asperiores tenetur ducimus voluptatem, officia harum animi a enim!</p>
-		</section>
+		
 	</main>
 	<!-- inicio de footer --> 
 	<footer class="pie">
-        <div>
-		 <p>&copy Todos los derechos reservados</p>
-         <p>I Lobos</p>
-	    </div>
-		<div class="iconos">
-            <i class="fab fa-facebook"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-whatsapp"></i>
-			<i class="tel"> Telefonos </i>
-        </div>
+		<div class="container-fluid">
+			<div class="row p-5 pb-2 bg-dark text-white">
+				<div class="col-xs-12 col-md-6 col-lg-3">
+					<p class="h3">China Belleza</p>
+					<p class="text-secondary">Buenos Aires, Argentina</p>
+				</div>
+				<div class="col-xs-12 col-md-6 col-lg-3">
+					<p class="h5 mb-3">Productos destacados</p>
+					<div class="mb-2">
+						<a class="text-secondary text-decoration-none" href="#"> Cuadernos cuero</a>
+					</div>
+					<div class="mb-2">
+						<a class="text-secondary text-decoration-none" href="#"> Cuadernos tela</a>
+					</div>
+					<div class="mb-2">
+						<a class="text-secondary text-decoration-none" href="#"> Cuadernos costura capitone</a>
+					</div>
+				</div>
+				<div class="col-xs-12 col-md-6 col-lg-3">
+					<p class="h5 mb-3">Links</p>
+					<div class="mb-2">
+						<a class="text-secondary text-decoration-none" href="#"> Terminos y condiciones</a>
+					</div>
+					<div class="mb-2">
+						<a class="text-secondary text-decoration-none" href="#"> Politica de privacidad</a>
+					</div>
+				</div>
+				<div class="col-xs-12 col-md-6 col-lg-3">
+					<p class="h5 mb-3">Redes sociales</p>
+					<div class="mb-2">
+						<a class="text-secondary text-decoration-none" href="#"> Instagram</a>
+					</div>
+					<div class="mb-2">
+						<a class="text-secondary text-decoration-none" href="#"> Facebook</a>
+					</div>
+					<div class="mb-2">
+						<a class="text-secondary text-decoration-none" href="#"> Twitter</a>
+					</div>
+				</div>
+				<div class="col-xs-12 pt-4">
+					<p class="text-white text-center"> Todos los derechos reservados 2022 - Ignacio Lobos</p>
+				</div>
+			</div>
+		</div> 
     </footer>
 	<img class="wpp" src="./assets/img/whatsapp.webp" alt="whats">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
