--- a/pages/producto.html
+++ b/pages/producto.html
@@ -51,52 +51,96 @@
 			<h2>NUESTROS PRODUCTOS</h2>
 		</article>
 	</section>
-	<section>
-		<table class="table__border" border="1">
-			<!-- ENCABEZADO -->
-			<thead>
-				<!-- TABLE ROW -->
-				<tr>
-					<th>Agendas</th>
-					<th>Páginas</th>
-					<th>Precio</th>
-				</tr>
-			</thead>
-			<!-- CONTENIDO PRINCIAPL -->
-			<tbody>
-				<!-- PRODUCTO 1 -->
-				<tr>
-					<td>Hojas lisas</td>
-					<td>80p</td>
-					<td>$1000</td>
-				</tr>
-				<!-- PRODUCTO 2 -->
-				<tr>
-					<td>Hojas rayadas/cuadriculadas</td>
-					<td>80p</td>
-					<td>$1200</td>
-				</tr>
-				<!-- PRODUCTO 3 -->
-				<tr>
-					<td>Personalizada</td>
-					<td>80p</td>
-					<td>$1400</td>
-				</tr>
-			</tbody>
-			<!-- PIE DE TABLA -->
-			<tfoot>
-				<tr>
-					<td>Totales</td>
-					<td>240p</td>
-					<td>$3600</td>
-				</tr>
-			</tfoot>
-		</table>
+	<section class="container">
+		<div class="row mt-5 p-5 pb-5">
+			<div class="col-md-3">
+				<div class="card h-100 text-bg-light tarjeta:hover tarjeta ">
+				 <img src="./assets/img/imag 1.jpg" width="200px" height="300px" class="card-img-top" alt="1">
+				 <div class="card-body">
+				  <h5 class="card-title">Card title</h5>
+				  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				  <a href="#" class="btn btn-primary">Go somewhere</a>
+				</div>
+			  </div>
+			</div>
+			<div class="col-md-3">
+				<div class="card h-100 text-bg-light tarjeta:hover tarjeta">
+				 <img src="./assets/img/imag 2.jpg" width="200px" height="300px" class="card-img-top" alt="2">
+				 <div class="card-body">
+				  <h5 class="card-title">Card title</h5>
+				  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				  <a href="#" class="btn btn-primary">Go somewhere</a>
+				</div>
+			  </div>
+			</div>
+			<div class="col-md-3">
+				<div class="card h-100 text-bg-light tarjeta:hover tarjeta">
+				 <img src="./assets/img/imag 2.jpg" width="200px" height="300px" class="card-img-top" alt="2">
+				 <div class="card-body">
+				  <h5 class="card-title">Card title</h5>
+				  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				  <a href="#" class="btn btn-primary">Go somewhere</a>
+				</div>
+			  </div>
+			</div>
+			<div class="col-md-3">
+				<div class="card h-100 text-bg-light tarjeta:hover tarjeta">
+				 <img src="./assets/img/imag 3.jpg" width="200px" height="300px" class="card-img-top" alt="3">
+				 <div class="card-body">
+				  <h5 class="card-title">Card title</h5>
+				  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				  <a href="#" class="btn btn-primary">Go somewhere</a>
+				</div>
+			  </div>
+			</div>
+		</div>
 	</section>
 	<!-- inicio de footer --> 
 	<footer class="pie">
-        <p>&copy Todos los derechos reservados</p>
-        <p>I Lobos</p>
+		<div class="container-fluid">
+			<div class="row p-5 pb-2 bg-dark text-white">
+				<div class="col-xs-12 col-md-6 col-lg-3">
+					<p class="h3">China Belleza</p>
+					<p class="text-secondary">Buenos Aires, Argentina</p>
+				</div>
+				<div class="col-xs-12 col-md-6 col-lg-3">
+					<p class="h5 mb-3">Productos destacados</p>
+					<div class="mb-2">
+						<a class="text-secondary text-decoration-none" href="#"> Cuadernos cuero</a>
+					</div>
+					<div class="mb-2">
+						<a class="text-secondary text-decoration-none" href="#"> Cuadernos tela</a>
+					</div>
+					<div class="mb-2">
+						<a class="text-secondary text-decoration-none" href="#"> Cuadernos costura capitone</a>
+					</div>
+				</div>
+				<div class="col-xs-12 col-md-6 col-lg-3">
+					<p class="h5 mb-3">Links</p>
+					<div class="mb-2">
+						<a class="text-secondary text-decoration-none" href="#"> Terminos y condiciones</a>
+					</div>
+					<div class="mb-2">
+						<a class="text-secondary text-decoration-none" href="#"> Politica de privacidad</a>
+					</div>
+				</div>
+				<div class="col-xs-12 col-md-6 col-lg-3">
+					<p class="h5 mb-3">Redes sociales</p>
+					<div class="mb-2">
+						<a class="text-secondary text-decoration-none" href="#"> Instagram</a>
+					</div>
+					<div class="mb-2">
+						<a class="text-secondary text-decoration-none" href="#"> Facebook</a>
+					</div>
+					<div class="mb-2">
+						<a class="text-secondary text-decoration-none" href="#"> Twitter</a>
+					</div>
+				</div>
+				<div class="col-xs-12 pt-4">
+					<p class="text-white text-center"> Todos los derechos reservados 2022 - Ignacio Lobos</p>
+				</div>
+			</div>
+		</div> 
     </footer>
 	<img class="wpp" src="../assets/img/whatsapp.webp" alt="whats">
 </body>
