--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -72,8 +72,50 @@
 	</section>
 	<!-- inicio de footer --> 
 	<footer class="pie">
-        <p>&copy Todos los derechos reservados</p>
-        <p>I Lobos</p>
+		<div class="container-fluid">
+			<div class="row p-5 pb-2 bg-dark text-white">
+				<div class="col-xs-12 col-md-6 col-lg-3">
+					<p class="h3">China Belleza</p>
+					<p class="text-secondary">Buenos Aires, Argentina</p>
+				</div>
+				<div class="col-xs-12 col-md-6 col-lg-3">
+					<p class="h5 mb-3">Productos destacados</p>
+					<div class="mb-2">
+						<a class="text-secondary text-decoration-none" href="#"> Cuadernos cuero</a>
+					</div>
+					<div class="mb-2">
+						<a class="text-secondary text-decoration-none" href="#"> Cuadernos tela</a>
+					</div>
+					<div class="mb-2">
+						<a class="text-secondary text-decoration-none" href="#"> Cuadernos costura capitone</a>
+					</div>
+				</div>
+				<div class="col-xs-12 col-md-6 col-lg-3">
+					<p class="h5 mb-3">Links</p>
+					<div class="mb-2">
+						<a class="text-secondary text-decoration-none" href="#"> Terminos y condiciones</a>
+					</div>
+					<div class="mb-2">
+						<a class="text-secondary text-decoration-none" href="#"> Politica de privacidad</a>
+					</div>
+				</div>
+				<div class="col-xs-12 col-md-6 col-lg-3">
+					<p class="h5 mb-3">Redes sociales</p>
+					<div class="mb-2">
+						<a class="text-secondary text-decoration-none" href="#"> Instagram</a>
+					</div>
+					<div class="mb-2">
+						<a class="text-secondary text-decoration-none" href="#"> Facebook</a>
+					</div>
+					<div class="mb-2">
+						<a class="text-secondary text-decoration-none" href="#"> Twitter</a>
+					</div>
+				</div>
+				<div class="col-xs-12 pt-4">
+					<p class="text-white text-center"> Todos los derechos reservados 2022 - Ignacio Lobos</p>
+				</div>
+			</div>
+		</div> 
     </footer>
 	<img class="wpp" src="../assets/img/whatsapp.webp" alt="whats">
 </body>
