--- a/index.html
+++ b/index.html
@@ -49,9 +49,14 @@
 	<!-- Contenido de sitio -->
 	<main>
 		<section class="imagenPrincipal">
-            <h2>Bienvenidos a CarpiViajes</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime necessitatibus inventore voluptates rem impedit fugiat officia aliquam voluptas! Commodi ab ut fugiat quas odio ratione quidem impedit similique aperiam. Modi.</p>
+            <h1>China Belleza</h1>
+            <p class="h3">El sitio para conseguir los mejores diseños de libretas y agendas personalizadas. Además encontrarás todas las novedades acerca de nuestros cursos!!!</p>
         </section>
+		<section>
+			<div>
+			<p class="text-dark text-center h2 m-3 p-3">Los recomendados de esta semana</p>
+		    </div>
+		</section>
 	
 		<section class="container">
 			<div class="row mt-5 p-5 pb-5">
@@ -59,9 +64,9 @@
 					<div class="card h-100 text-bg-light tarjeta:hover tarjeta ">
 					 <img src="./assets/img/imag 1.jpg" width="200px" height="300px" class="card-img-top" alt="1">
 					 <div class="card-body">
-					  <h5 class="card-title">Card title</h5>
-					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					  <a href="#" class="btn btn-primary">Go somewhere</a>
+					  <h5 class="card-title text-secondary">Agendas de cuero reciclado</h5>
+					  <p class="card-text">Presentamos nuestro nueva linea de agendas ecologicas</p>
+					  <a href="#" class="btn btn-primary">Saber más</a>
 					</div>
 				  </div>
 				</div>
@@ -69,9 +74,9 @@
 					<div class="card h-100 text-bg-light tarjeta:hover tarjeta">
 					 <img src="./assets/img/imag 2.jpg" width="200px" height="300px" class="card-img-top" alt="2">
 					 <div class="card-body">
-					  <h5 class="card-title">Card title</h5>
-					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					  <a href="#" class="btn btn-primary">Go somewhere</a>
+					  <h5 class="card-title text-secondary">Agendas de tela</h5>
+					  <p class="card-text">En diferentes tamaños y con diseños personalizados</p>
+					  <a href="#" class="btn btn-primary">Saber más</a>
 					</div>
 				  </div>
 				</div>
@@ -79,9 +84,9 @@
 					<div class="card h-100 text-bg-light tarjeta:hover tarjeta">
 					 <img src="./assets/img/imag 3.jpg" width="200px" height="300px" class="card-img-top" alt="3">
 					 <div class="card-body">
-					  <h5 class="card-title">Card title</h5>
-					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					  <a href="#" class="btn btn-primary">Go somewhere</a>
+					  <h5 class="card-title text-secondary">Agendas estampadas</h5>
+					  <p class="card-text">Para hacer un regalo especial podras pedir un estampado personalizado</p>
+					  <a href="#" class="btn btn-primary">Saber más</a>
 					</div>
 				  </div>
 				</div>
