--- a/pages/producto.html
+++ b/pages/producto.html
@@ -48,48 +48,76 @@
 	<!-- fila de información de mi sitio -->
 	<section>
 		<article>
-			<h2>NUESTROS PRODUCTOS</h2>
+			<div>
+			 <h2 class="text-center p-3 text-bg-secondary bg-dark.bg-gradient bg-opacity-50">NUESTROS PRODUCTOS</h2>
+		    </div>
+			<div>
+				<h3 class="text-center p-3 fw-bold">REGALOS PERSONALIZADOS</h3>
+			</div>
 		</article>
 	</section>
 	<section class="container">
 		<div class="row mt-5 p-5 pb-5">
-			<div class="col-md-3">
-				<div class="card h-100 text-bg-light tarjeta:hover tarjeta ">
-				 <img src="./assets/img/imag 1.jpg" width="200px" height="300px" class="card-img-top" alt="1">
+			<div class="col-md-4">
+				<div class="card h-100 tarjeta:hover tarjeta ">
+				 <img src="../assets/img/agenda regalo 1.png" width="200px" height="300px" class="card-img-top" alt="1">
 				 <div class="card-body">
-				  <h5 class="card-title">Card title</h5>
-				  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-				  <a href="#" class="btn btn-primary">Go somewhere</a>
+				  <h4 class="card-title text-dark h3 p-2 text-center">Agendas personalizadas</h4>
+				  <h5 class="text-center text-bg-secondary p-2 bg-opacity-50">$1500</h5>
 				</div>
 			  </div>
 			</div>
-			<div class="col-md-3">
-				<div class="card h-100 text-bg-light tarjeta:hover tarjeta">
-				 <img src="./assets/img/imag 2.jpg" width="200px" height="300px" class="card-img-top" alt="2">
+			<div class="col-md-4">
+				<div class="card h-100  tarjeta:hover tarjeta ">
+				 <img src="../assets/img/agenda regalo 2.png" width="200px" height="300px" class="card-img-top" alt="1">
 				 <div class="card-body">
-				  <h5 class="card-title">Card title</h5>
-				  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-				  <a href="#" class="btn btn-primary">Go somewhere</a>
+				  <h4 class="card-title text-dark h3 p-2 text-center">Agendas a color</h4>
+				  <h5 class="text-center text-bg-secondary p-2 bg-opacity-50">$1500</h5>
 				</div>
 			  </div>
 			</div>
-			<div class="col-md-3">
-				<div class="card h-100 text-bg-light tarjeta:hover tarjeta">
-				 <img src="./assets/img/imag 2.jpg" width="200px" height="300px" class="card-img-top" alt="2">
+			<div class="col-md-4">
+				<div class="card h-100  tarjeta:hover tarjeta ">
+				 <img src="..//assets/img/agenda regalo 3.jpg" width="200px" height="300px" class="card-img-top" alt="1">
 				 <div class="card-body">
-				  <h5 class="card-title">Card title</h5>
-				  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-				  <a href="#" class="btn btn-primary">Go somewhere</a>
+				  <h4 class="card-title text-dark h3 p-2 text-center">Agendas ecológicas</h4>
+				  <h5 class="text-center text-bg-secondary p-2 bg-opacity-50">$1500</h5>
 				</div>
 			  </div>
 			</div>
-			<div class="col-md-3">
-				<div class="card h-100 text-bg-light tarjeta:hover tarjeta">
-				 <img src="./assets/img/imag 3.jpg" width="200px" height="300px" class="card-img-top" alt="3">
+		</div>
+	</section>
+	<section>
+		<div>
+			<h3 class="text-center p-3 fw-bold">REGALOS EMPRESARIALES</h3>
+		</div>
+	</section>
+	<section class="container">
+		<div class="row mt-5 p-5 pb-5">
+			<div class="col-md-4">
+				<div class="card h-100  tarjeta:hover tarjeta ">
+				 <img src="../assets/img/agenda empresa 1.jpg" width="200px" height="300px" class="card-img-top" alt="1">
 				 <div class="card-body">
-				  <h5 class="card-title">Card title</h5>
-				  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-				  <a href="#" class="btn btn-primary">Go somewhere</a>
+				  <h4 class="card-title text-dark h3 p-2 text-center">Agenda empresarial</h4>
+				  <h5 class="text-center text-bg-secondary p-2 bg-opacity-50">$1500</h5>
+				</div>
+			  </div>
+			</div>
+			<div class="col-md-4">
+				<div class="card h-100  tarjeta:hover tarjeta ">
+				 <img src="../assets/img/agenda empresa 2.jpg" width="200px" height="300px" class="card-img-top" alt="1">
+				 <div class="card-body">
+				  <h4 class="card-title text-dark h3 p-2 text-center">Agenda ecologica</h4>
+				  <h5 class="text-center text-bg-secondary p-2 bg-opacity-50">$1500</h5>
+				</div>
+			  </div>
+			</div>
+			<div class="col-md-4">
+				<div class="card h-100  tarjeta:hover tarjeta ">
+				 <img src="../assets/img/agenda empresa 3.jpg" width="200px" height="300px" class="card-img-top" alt="1">
+				 <div class="card-body">
+				  <h4 class="card-title text-dark h3 p-2 text-center">Agendas luxor con estuche</h4>
+				  <h5 class="text-center text-bg-secondary p-2 bg-opacity-50">$1500</h5>
 				</div>
 			  </div>
 			</div>
