--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -43,71 +43,73 @@
 			</ul>
 		</nav>
 	</header>
-	
-	<section class="container">
-        <div class="row mt-5 gap-5 gap-md-0">
-            <div class="col-md-6">
-                <h4>Información de contacto</h4>
-                <div class="accordion" id="accordionExample">
-                    <div class="accordion-item">
-                      <h2 class="accordion-header" id="headingOne">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                          Teléfono
-                        </button>
-                      </h2>
-                      <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                          00 00 000 000
+	<main>
+    <section class="imagencontacto">
+    </section>
+    <section class="container">
+          <div class="row mt-5 gap-5 gap-md-0 p-5 m-5">
+              <div class="col-md-6">
+                  <h4>Información de contacto</h4>
+                  <div class="accordion" id="accordionExample">
+                      <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingOne">
+                          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            Teléfono
+                          </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                          <div class="accordion-body">
+                            00 00 000 000
+                          </div>
                         </div>
                       </div>
-                    </div>
-                    <div class="accordion-item">
-                      <h2 class="accordion-header" id="headingTwo">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                          Dirección
-                        </button>
-                      </h2>
-                      <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                          Bs As 123
+                      <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingTwo">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            Dirección
+                          </button>
+                        </h2>
+                        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                          <div class="accordion-body">
+                            Bs As 123
+                          </div>
                         </div>
                       </div>
-                    </div>
-                    <div class="accordion-item">
-                      <h2 class="accordion-header" id="headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                          Correo electrónico
-                        </button>
-                      </h2>
-                      <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                          info@ejemplo.com
+                      <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingThree">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Correo electrónico
+                          </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                          <div class="accordion-body">
+                            info@ejemplo.com
+                          </div>
                         </div>
                       </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <h4>Envianos un mensaje</h4>
-                <form>
-                    <div class="mb-3">
-                        <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-                        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Ingresá tu nombre">
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleFormControlInput1" class="form-label">E-mail</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ingresá tu e-mail">
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                    </div>
-                </form>
-            </div>
-        </div>
+                  </div>
+              </div>
+              <div class="col-md-6">
+                  <h4>Envianos un mensaje</h4>
+                  <form>
+                      <div class="mb-3">
+                          <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+                          <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Ingresá tu nombre">
+                      </div>
+                      <div class="mb-3">
+                          <label for="exampleFormControlInput1" class="form-label">E-mail</label>
+                          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ingresá tu e-mail">
+                      </div>
+                      <div class="mb-3">
+                          <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+                          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                      </div>
+                  </form>
+              </div>
+          </div>
     </section>
 
-
+  </main>
     <footer class="pie">
       <div class="container-fluid">
         <div class="row p-5 pb-2 bg-dark text-white">
