--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -46,30 +46,18 @@
 	</header>
 	<!-- cierre de fila logo + nav -->
 	<!-- fila de información de mi sitio -->
-	<section>
-		<article>
-			<table>
-				<tr>
-					<td><a href="https://facebook.com" target="_blank"><img src="/assets/img/header ubicacion.jpg" alt="imagen ubicacion" width="100%"></a></td>
-				</tr>
-				<tr>
-					<td>
-						<h2>DIRECCIÓN</h2>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.0168878894506!2d-58.38375908417492!3d-34.603734465007136!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4aa9f0a6da5edb%3A0x11bead4e234e558b!2sObelisco!5e0!3m2!1ses-419!2sar!4v1660062068124!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" 
-					</td>
-				</tr>
-			</table>
-		</article>
-	</section>
-	<section>
-		<article>
-			
-		</article>
-	</section>
+	<main>
+		<section class="imagenubicacion">
+        </section>
+		<section>
+			<h2 class="text-center p-1 mt-5 fw-bold"> DIRECCIÓN</h2>
+		</section>
+		<section>
+			<div class="col-md-12 p-5 m-5 text-center">
+			 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.0168878894506!2d-58.38375908417492!3d-34.603734465007136!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4aa9f0a6da5edb%3A0x11bead4e234e558b!2sObelisco!5e0!3m2!1ses-419!2sar!4v1660062068124!5m2!1ses-419!2sar" width="500vh" height="500vh" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" 
+			</div>
+			</section>
+	</main>
 	<!-- inicio de footer --> 
 	<footer class="pie">
 		<div class="container-fluid">
